automatically backed up by learn

--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,9 @@
 </head>
 <body>
   <div id="image"  >
-  <script ></script>
+  <script >
+    $("#image").append()
+  </script>
   </div>
   <script type="html/text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
 </body>
