--- a/html/index.html
+++ b/html/index.html
@@ -9,5 +9,5 @@
     $("#image").append(`<img src="https://s3.amazonaws.com/learn-verified/painting-with-dog.gif"/>`)
   </script>
   </div>
-  <script type="html/text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
 </body>
