--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <div id="image"  >
-
+<script></script>
     $(`#image`).append(`<img src="https://s3.amazonaws.com/learn-verified/painting-with-dog.gif"/>`)
   
   </div>
